fix some stuff for pandata team

--- a/game.html
+++ b/game.html
@@ -45,8 +45,7 @@
 	</div>
 	
 	<div class="idc">  
-		<img id="idcLogo" src="bg.png" width="35%">
-		<h1 id="welcomePageInfo" ><p>2. AGÜ YARISIYOR</p> </h1>
+		<h1 id="welcomePageInfo" ><p>Pandata Family Feud</p> </h1>
 		<h1 id="counter"></h1>
 		<h1 id="winnerId" class="winner" >who is the winner???</h1>
 	</div>
